--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^10.7.2",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.7",
+    "universal-cookie": "^6.1.3",
     "vue": "^3.3.11",
     "vue-router": "4"
   },
